[FIX] color in dark mode

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,20 +11,31 @@ body {
 }
 
 // define the dark theme palettes
-$dark-primary: mat.define-palette(mat.$blue-gray-palette);
-$dark-accent: mat.define-palette(mat.$amber-palette, A200, A100, A400);
+$dark-primary: mat.define-palette(mat.$purple-palette);
+$dark-accent: mat.define-palette(mat.$green-palette, A200, A100, A400);
+$dark-warn: mat.define-palette(mat.$gray-palette);
 
 $dark-theme: mat.define-dark-theme(
 	(
 		color: (
 			primary: $dark-primary,
 			accent: $dark-accent,
+			warn: $dark-warn,
 		),
 	)
 );
 
 body.dark-theme {
 	@include mat.all-component-themes($dark-theme);
+
+	.task-overview-container,
+	.task-form-container {
+		color: white;
+	}
+
+	mat-label {
+		color: white;
+	}
 }
 
 // CUSTOM ICON
